[package]
name = "libertas-matter"
version = "0.1.2"
edition = "2024"
authors = ["Kedar Sovani <kedars@gmail.com>", "Ivan Markov", "Project CHIP Authors", "Qingjun Wei"]
description = "A stripped-down lite version of official rs-matter"
repository = "https://github.com/project-chip/matter-rs"
readme = "README.md"
keywords = ["matter", "smart", "smart-home", "IoT", "ESP32"]
categories = ["embedded", "network-programming"]
license = "Apache-2.0"

[features]
default = ["alloc", "log"]

# General
os = ["std", "backtrace", "embassy-sync/std", "embassy-time/std"]
std = ["alloc"]
backtrace = []
alloc = ["defmt?/alloc"]
defmt = ["dep:defmt", "heapless/defmt-03", "embassy-time/defmt"]
log = ["dep:log", "embassy-time/log"]
debug-tlv-payload = []
large-buffers = [] # TCP support

[dependencies]
libertas-matter-macros = { version = "0.1", path = "../rs-matter-macros" }
cfg-if = "1"
bitflags = { version =  "2.5", default-features = false }
heapless = "0.8"
num = { version = "0.4", default-features = false, features = [] }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
strum = { version = "0.26", features = ["derive"], default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
subtle = { version = "2.5", default-features = false }
time = { version = "0.3", default-features = false, optional = true }
verhoeff = { version = "1", default-features = false }
embassy-futures = { version = "0.1.2", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-sync = { version = "0.7", optional = true }
either = { version = "1", default-features = false }
domain = { version = "0.10", default-features = false, features = ["heapless"] }
scopeguard = { version = "1", default-features = false, optional = true }
pinned-init = { version = "0.0.8", default-features = false }

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["net"] }
futures-lite = "2"
async-channel = "2"
static_cell = "2"
similar = "2.6"
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
trybuild = "1"
