[package]
name = "libertas-matter"
version = "0.1.3"
edition = "2024"
authors = ["Kedar Sovani <kedars@gmail.com>", "Ivan Markov", "Project CHIP Authors", "Qingjun Wei"]
description = "A stripped-down lite version of official rs-matter"
repository = "https://github.com/project-chip/matter-rs"
readme = "README.md"
keywords = ["matter", "smart", "smart-home", "IoT", "ESP32"]
categories = ["embedded", "network-programming"]
license = "Apache-2.0"

[features]
default = ["alloc", "log"]

# General
os = ["std", "backtrace"]
std = ["alloc"]
backtrace = []
alloc = ["defmt?/alloc"]
defmt = ["dep:defmt", "heapless/defmt-03"]
log = ["dep:log"]
debug-tlv-payload = []
large-buffers = [] # TCP support

[dependencies]
libertas = { git = "https://github.com/LibertasIoT/libertas-rs.git", package="libertas" }
libertas-matter-macros = { version = "0.1", path = "../rs-matter-macros" }
bitflags = { version =  "2.5", default-features = false }
heapless = "0.8"
num = { version = "0.4", default-features = false, features = [] }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
strum = { version = "0.26", features = ["derive"], default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
pinned-init = { version = "0.0.8", default-features = false }

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["net"] }
futures-lite = "2"
async-channel = "2"
static_cell = "2"
similar = "2.6"
trybuild = "1"
